# prac-assignments-q4

.devcontainer/: devcontainer.json
08_tools_web_search/: main.py  pyproject.toml
09_agents_as_tool/: main.py  pyproject.toml
10_context/: main.py  pyproject.toml
10_context_dynamic_instructions/: main.py  pyproject.toml
email_communicator-agent/: .gitignore  agent.py  app.py  chainlit.py  credentials.json  main.py  pyproject.toml  requirements.txt  sample.py  token_jamilayaqoobdhedhi_gmail.com.pickle  token_nurjamila1_gmail.com.pickle
email_communicator-agent/custom_agents/: fetch_email_agent.py  send_email_agent.py
email_communicator-agent/tools/: fetch_emails.py  send_email.py
fastapi_demo/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
fastapi_demo/api/: index.py
fastapi_streaming_response/: .gitignore  agent.py  config.py  context.py  guardrails.py  main.py  pyproject.toml  requirements.txt
maths-python-science-agents/: main.py  pyproject.toml
openrouter-translator-agent/: main.py  pyproject.toml
paraphraser-agent/: main.py  pyproject.toml
reminder-agent/: .gitignore  main.py  pyproject.toml  reminders.db
reminder-agent/.streamlit/: secrets.toml
streaming_chatbot/: README.md  package-lock.json  package.json
streaming_chatbot/src/app/: layout.tsx  page.tsx
streaming_chatbot/src/app/api/chat/: route.ts
weather-agent-chainlit/: chainlit.yaml  main.py  pyproject.toml
